log
Sat, May  3, 2025 10:51:53 PM: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'createTreeMap':
treemap.c:40:55: error: expected ',' or ';' before ':' token
     TreeMap* new = (TreeMap*) malloc(sizeof(TreeMap)) :
                                                       ^
5729e4d
Sat, May  3, 2025 10:52:02 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
a9901d1
Sat, May  3, 2025 11:04:26 PM: 
 treemap.c | 28 ++++++++++++++++++++++++++++
 1 file changed, 28 insertions(+)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:55:21: error: too many arguments to function 'createTreeMap'
     TreeNode* new = createTreeMap(key, value) ;
                     ^~~~~~~~~~~~~
treemap.c:39:11: note: declared here
 TreeMap * createTreeMap(int (*lower_than) (void* key1, void* key2)) {
           ^~~~~~~~~~~~~
treemap.c:55:21: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
     TreeNode* new = createTreeMap(key, value) ;
                     ^~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
cd86e5a
Sat, May  3, 2025 11:04:36 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|7
total_score: 5/70
8c48df6
Sat, May  3, 2025 11:05:38 PM: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|7
total_score: 5/70
2b7a8aa
Sat, May  3, 2025 11:13:19 PM: 
 treemap.c | 12 ++++--------
 1 file changed, 4 insertions(+), 8 deletions(-)
 tests:  3|7
total_score: 5/70
cee441e
Sat, May  3, 2025 11:13:46 PM: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  5|6
total_score: 5/70
771fcc5
Sat, May  3, 2025 11:15:56 PM: 
 treemap.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
 tests:  5|6
total_score: 5/70
447e7bc
Sat, May  3, 2025 11:18:21 PM: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  8|5
total_score: 15/70
c66cc5b
Sat, May  3, 2025 11:21:44 PM: 
 treemap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  10|5
total_score: 15/70
cba5a4f
Sat, May  3, 2025 11:22:06 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:145:5: error: 'return' with no value, in function returning non-void [-Werror]
     return ;
     ^~~~~~
treemap.c:129:8: note: declared here
 Pair * searchTreeMap(TreeMap * tree, void* key) {
        ^~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
b434eca
Sat, May  3, 2025 11:22:15 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|5
total_score: 15/70
059de5c
Sat, May  3, 2025 11:22:28 PM: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  18|3
total_score: 40/70
8a69d3d
Sat, May  3, 2025 11:24:19 PM: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  18|3
total_score: 40/70
2b0bf50
Sat, May  3, 2025 11:24:36 PM: 
 treemap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  18|3
total_score: 40/70
486b93e
Sat, May  3, 2025 11:26:48 PM: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'upperBound':
treemap.c:151:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
2039341
Sat, May  3, 2025 11:27:04 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  20|2
total_score: 45/70
2def42b
Sat, May  3, 2025 11:35:11 PM: 
 treemap.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
 tests:  20|2
total_score: 45/70
5b0fc79
Sat, May  3, 2025 11:35:48 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  25|1
total_score: 60/70
76b528f
Sat, May  3, 2025 11:45:21 PM: 
 treemap.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
 tests:  25|1
total_score: 60/70
42da142
Sat, May  3, 2025 11:45:33 PM: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  26|1
total_score: 60/70
b6276cb
Sat, May  3, 2025 11:45:51 PM: 
 treemap.c | 4 ----
 1 file changed, 4 deletions(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'upperBound':
treemap.c:151:15: error: variable 'ubNode' set but not used [-Werror=unused-but-set-variable]
     TreeNode* ubNode = NULL ;
               ^~~~~~
cc1.exe: all warnings being treated as errors
c5ae225
